# simplydigitals-aiconnoisseur

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  simplydigitals-aiconnoisseur.code-workspace
.github/workflows/: .keep  api-ci.yml  coverage-report.yml  detect-changes.yml  orchestrator.yml  post-deploy-tests.yml  pr-quality-gate.yml  ui-ci.yml
docs/: index.html
scripts/: pre-commit-summary.sh
simplydigitals-aiconnoisseur-api/: .coverage 2  .coverage 3  .coverage 4  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  sonar-project.properties
simplydigitals-aiconnoisseur-api/.github/: SECRETS.md  pull_request_template.md
simplydigitals-aiconnoisseur-api/.github/.github/workflows/: detect-changes.yml  orchestrator.yml
simplydigitals-aiconnoisseur-api/.github/workflows/: ci-cd.yml  pr-quality-gate.yml
simplydigitals-aiconnoisseur-api/app/: main.py
simplydigitals-aiconnoisseur-api/app/api/v1/: deps.py
simplydigitals-aiconnoisseur-api/app/api/v1/endpoints/: analytics.py  auth.py  datasets.py  models.py
simplydigitals-aiconnoisseur-api/app/core/: config.py  logging.py  security.py
simplydigitals-aiconnoisseur-api/app/db/: session.py
simplydigitals-aiconnoisseur-api/app/ml/: pipeline.py
simplydigitals-aiconnoisseur-api/app/models/: models.py
simplydigitals-aiconnoisseur-api/app/modules/analytics/: router.py  schemas.py  service.py
simplydigitals-aiconnoisseur-api/app/modules/auth/: dependencies.py  models.py  oauth.py  router.py  schemas.py  service.py
simplydigitals-aiconnoisseur-api/app/modules/datasets/: models.py  router.py  schemas.py  service.py
simplydigitals-aiconnoisseur-api/app/modules/models/: models.py  router.py  schemas.py  service.py
simplydigitals-aiconnoisseur-api/app/schemas/: schemas.py
simplydigitals-aiconnoisseur-api/app/services/: ml_service.py  user_service.py
simplydigitals-aiconnoisseur-api/app/shared/: base.py  config.py  database.py  logging.py  s3_service.py  security.py
simplydigitals-aiconnoisseur-api/app/shared/i18n/: translator.py
simplydigitals-aiconnoisseur-api/app/shared/i18n/locales/: en.json  ms.json  ta.json  zh.json
simplydigitals-aiconnoisseur-api/docs/: er-diagram.md
simplydigitals-aiconnoisseur-api/migrations/: env.py
simplydigitals-aiconnoisseur-api/migrations/versions/: 001_initial.py  002_add_client_ip.py  003_oauth_fields.py  004_modular_monolith.py  005_add_s3_key_to_datasets.py  006_add_file_size_to_datasets.py
simplydigitals-aiconnoisseur-api/scripts/: deploy_aws.sh  smoke_test.py
simplydigitals-aiconnoisseur-api/scripts/smoke_test_output/: smoke_test_report.html  smoke_test_results.json
simplydigitals-aiconnoisseur-api/tests/bdd/: environment.py
simplydigitals-aiconnoisseur-api/tests/bdd/features/: analytics.feature  authentication.feature  ml_training.feature
simplydigitals-aiconnoisseur-api/tests/bdd/steps/: analytics_steps.py  auth_steps.py  ml_steps.py
simplydigitals-aiconnoisseur-api/tests/integration/: conftest.py  test_auth_e2e.py  test_smoke.py
simplydigitals-aiconnoisseur-api/tests/unit/: conftest.py  test_analytics_endpoints.py  test_auth_endpoints.py  test_data_isolation.py  test_dataset_endpoints.py  test_dataset_history.py  test_dockerfile.py  test_health_and_middleware.py  test_ml_pipeline.py  test_model_endpoints.py  test_oauth_service.py  test_s3_service.py  test_security.py  test_user_service.py
simplydigitals-aiconnoisseur-ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
simplydigitals-aiconnoisseur-ui/e2e/: post-deploy.spec.js
simplydigitals-aiconnoisseur-ui/src/: App.jsx  main.jsx
simplydigitals-aiconnoisseur-ui/src/__tests__/: App.test.jsx  AppHub.test.jsx  HistorySection.test.jsx  LandingPage.test.jsx  Layout.test.jsx  LoginPage.test.jsx  PlotsSection.test.jsx  setup 2.js  setup.js  store.test.js
simplydigitals-aiconnoisseur-ui/src/components/abtesting/: ABTestingSection.jsx
simplydigitals-aiconnoisseur-ui/src/components/explorer/: ExplorerSection.jsx
simplydigitals-aiconnoisseur-ui/src/components/hub/: AppHub.jsx  ProductCard.jsx
simplydigitals-aiconnoisseur-ui/src/components/landing/: LandingPage.jsx
simplydigitals-aiconnoisseur-ui/src/components/layout/: Dashboard.jsx  Layout.jsx  LoginPage.jsx
simplydigitals-aiconnoisseur-ui/src/components/plots/: PlotsSection.jsx
simplydigitals-aiconnoisseur-ui/src/components/preprocessing/: PreprocessingSection.jsx
simplydigitals-aiconnoisseur-ui/src/components/shared/: ProductHeader.jsx
simplydigitals-aiconnoisseur-ui/src/components/showcase/: TechShowcasePage.jsx
simplydigitals-aiconnoisseur-ui/src/components/upload/: HistorySection.jsx  UploadSection.jsx
simplydigitals-aiconnoisseur-ui/src/products/: registry.js
simplydigitals-aiconnoisseur-ui/src/products/arbitrageur/: ArbitrageurApp.jsx
simplydigitals-aiconnoisseur-ui/src/products/arbitrageur/layout/: ArbitrageurLayout.jsx
simplydigitals-aiconnoisseur-ui/src/products/arbitrageur/sections/: ChartSection.jsx  PortfolioSection.jsx  TriggersSection.jsx  WatchlistSection.jsx
simplydigitals-aiconnoisseur-ui/src/products/arbitrageur/store/: arbitrageurStore.js
simplydigitals-aiconnoisseur-ui/src/products/connoisseur/: ConnoisseurApp.jsx
simplydigitals-aiconnoisseur-ui/src/store/: index.js
simplydigitals-aiconnoisseur-ui/src/styles/: globals.css
simplydigitals-aiconnoisseur-ui/src/utils/: api.js
